fix: overlappping pie parts were an unwanted effect, next to #71

--- a/src/scss/components/_charts-pie.scss
+++ b/src/scss/components/_charts-pie.scss
@@ -57,7 +57,7 @@
       width: $width / 2;
 
       &::before {
-        --position: calc(var(--value, 0) * .01turn + 1deg);
+        --position: calc(var(--value, 0) * .01turn);
         background-color: var(--color, currentColor);
         content: "";
         display: initial;
@@ -85,10 +85,10 @@
         background-image: url($pattern); /* 1 */
       }
     }
-    
-    tbody:hover tr { 
+
+    tbody:hover tr {
       opacity: .75;
-        
+
       &:hover {
         opacity: 1;
       }
